[project]
name = "praevia-neuroimpact-backend"
version = "0.1.0"
description = "FastAPI backend for PraevIA NeuroImpact Analyzer"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "google-auth>=2.35.0",
  "httpx>=0.28.0",
  "numpy>=1.26.0",
  "playwright>=1.48.0",
  "PyJWT>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "sentry-sdk[fastapi]>=2.20.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
preprocessing = [
  "faster-whisper>=1.1.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["supabase*"]

[tool.ruff]
line-length = 120
